compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__negate_string.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1780
expression: "!\"Hello Gleam\""
snapshot_kind: text
---
----- SOURCE CODE
!"Hello Gleam"

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:2
  │
1 │ !"Hello Gleam"
  │  ^^^^^^^^^^^^^

Expected type:

    Bool

Found type:

    String
