compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__no_hint_for_non_method_call.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2033
expression: "\npub type User {\n  User(id: Int, name: String)\n}\n\nfn login(user: User) {\n  user\n}\n\npub fn main(user: User) {\n  login(user.wibble)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type User {
  User(id: Int, name: String)
}

fn login(user: User) {
  user
}

pub fn main(user: User) {
  login(user.wibble)
}


----- ERROR
error: Unknown record field
   ┌─ /src/one/two.gleam:11:14
   │
11 │   login(user.wibble)
   │              ^^^^^^ This field does not exist

The value being accessed has this type:

    User

It has these accessible fields:

    .id
    .name
